acervo-2010/planejadores_analise_resultados/comp/planners/ipplan/source/scan-probname.output
Terminals unused in grammar

   SITUATION_TOK
   BSITUATION_TOK
   OBJECTS_TOK
   BDOMAIN_TOK
   INIT_TOK
   GOAL_TOK
   AND_TOK
   NOT_TOK
   VARIABLE
   TYPE
   EQUAL_TOK
   FORALL_TOK
   IMPLY_TOK
   OR_TOK
   EXISTS_TOK
   EITHER_TOK


Gramática

    0 $accept: file $end

    1 file: problem_definition

    2 $@1: /* vazio */

    3 problem_definition: '(' DEFINE_TOK $@1 problem_name

    4 problem_name: '(' PROBLEM_TOK NAME


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 3 4
error (256)
DEFINE_TOK (258) 3
PROBLEM_TOK (259) 4
SITUATION_TOK (260)
BSITUATION_TOK (261)
OBJECTS_TOK (262)
BDOMAIN_TOK (263)
INIT_TOK (264)
GOAL_TOK (265)
AND_TOK (266)
NOT_TOK (267)
NAME (268) 4
VARIABLE (269)
TYPE (270)
EQUAL_TOK (271)
FORALL_TOK (272)
IMPLY_TOK (273)
OR_TOK (274)
EXISTS_TOK (275)
EITHER_TOK (276)


Não-terminais com as regras onde eles aparecem

$accept (23)
    à esquerda: 0
file (24)
    à esquerda: 1, à direita: 0
problem_definition (25)
    à esquerda: 3, à direita: 1
$@1 (26)
    à esquerda: 2, à direita: 3
problem_name (27)
    à esquerda: 4, à direita: 3


estado 0

    0 $accept: . file $end

    '('  deslocar, e ir ao estado 1

    file                ir ao estado 2
    problem_definition  ir ao estado 3


estado 1

    3 problem_definition: '(' . DEFINE_TOK $@1 problem_name

    DEFINE_TOK  deslocar, e ir ao estado 4


estado 2

    0 $accept: file . $end

    $end  deslocar, e ir ao estado 5


estado 3

    1 file: problem_definition .

    $padrão  reduzir usando a regra 1 (file)


estado 4

    3 problem_definition: '(' DEFINE_TOK . $@1 problem_name

    $padrão  reduzir usando a regra 2 ($@1)

    $@1  ir ao estado 6


estado 5

    0 $accept: file $end .

    $padrão  aceitar


estado 6

    3 problem_definition: '(' DEFINE_TOK $@1 . problem_name

    '('  deslocar, e ir ao estado 7

    problem_name  ir ao estado 8


estado 7

    4 problem_name: '(' . PROBLEM_TOK NAME

    PROBLEM_TOK  deslocar, e ir ao estado 9


estado 8

    3 problem_definition: '(' DEFINE_TOK $@1 problem_name .

    $padrão  reduzir usando a regra 3 (problem_definition)


estado 9

    4 problem_name: '(' PROBLEM_TOK . NAME

    NAME  deslocar, e ir ao estado 10


estado 10

    4 problem_name: '(' PROBLEM_TOK NAME .

    $padrão  reduzir usando a regra 4 (problem_name)
